--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,10 @@ h1 {
   margin-bottom: 20px;
 }
 
+h2, p, h3, form {
+  color: #fff;
+}
+
 .welcome-message {
   font-size: 1.5rem;
   margin-bottom: 30px;
@@ -35,7 +39,7 @@ h1 {
   margin: 10px;
   font-size: 1.2rem;
   text-decoration: none;
-  color: #fff;
+  color: #ffffff;
   background-color: #6f42c1; /* Morado */
   border: none;
   border-radius: 5px;
@@ -52,4 +56,25 @@ h1 {
 
 .purple:hover {
   background-color: #5a3d8a; /* Morado más oscuro al pasar el mouse */
+}
+
+label, input, button {
+    color: white;
+    background-color: black;
+    border: 1px solid white;
+    margin: 5px 0;
+    padding: 5px;
+}
+
+input, button {
+    width: 100%;
+}
+
+button {
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
 }
